--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">BS23TaskPritom</string>
+    <string name="app_name">BS23 Task Pritom</string>
+    <string name="press_back_again">Press back again to leave the app or Press Leave.</string>
+    <string name="exit">Exit</string>
+    <string name="leave">Leave</string>
 </resources>
